--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.5",
     "swr": "^2.2.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
